修改环境配置